#7494 closed bug (fixed)
ReadOnlyBootPrompt's catkey has synchronization problem in HTA
Reported by: | starsseed | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/FirstBootPrompt | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
A string from ReadOnlyBootPrompt is remove and added repeatedly because its note is truncated.
look at the bottom of http://hta.polytect.org/catalogs/view/13/fr
it should end with <www.haiku-os.org>.\"
but it ends with <www.hai
Is the string too long ?
Attachments (1)
Change History (13)
by , 14 years ago
Attachment: | BootPromptWindow.cpp.patch added |
---|
Patch with shortend B_TRANSLATE_COMMENT string.
comment:2 by , 14 years ago
patch: | 0 → 1 |
---|
follow-up: 4 comment:3 by , 14 years ago
Applied patch with hrev41542. I also translated that dtring at least twice... :) Let's see if it helps.
BTW, the fact one cannot copy&paste from an "inactive" string at HTA kinda sucks.
comment:4 by , 14 years ago
Replying to humdinger:
BTW, the fact one cannot copy&paste from an "inactive" string at HTA kinda sucks.
But at least, one can click on the hour glass and then copy&paste from the history of an inactive string;-) Took me a couple of weeks to notice this, though;-)
comment:5 by , 14 years ago
On HTA, there is only one entry at the moment and the string seems complete. Let's wait for the new translations and catkeys to see if it really works.
comment:7 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Thanks for checking, starseed. Thanks for the patch, taos. Closing ticket as fixed.
comment:8 by , 14 years ago
The string reappeared again today. So this ticket needs to be re-opened.
follow-up: 10 comment:9 by , 14 years ago
comment:10 by , 14 years ago
Replying to taos:
Not really - the reappearance was caused by a different handling of escaped characters in hrev41629 in order to solve #7543. If you look closely, you can see that \" was replaced by " in the string on HTA. So it's not the same string reappearing again and again and...
Yuck! I actually might have messed that up. I don't know which mechanism HTA uses to get the keys and write them back, but string changes where definitely unintended.
comment:12 by , 12 years ago
Component: | Applications/ReadOnlyBootPrompt → Applications/FirstBootPrompt |
---|
Modifying ticket to reflect the renaming of ReadOnlyBootPrompt to FirstBootPrompt.
On HTA, this string was removed and re-added so often that there are now more than 60 entries. Every translation attempt is futile because this string will be overwritten a few hours later.
I don't know enough about programming for Haiku to decide what exactly causes this problem. I've added a patch with a shortened string. However, I can't test if this patch will help the situation on HTA.
As ReadOnlyBootPrompt is - after the boot logo - the first thing users see, I think we should try to solve this problem for alpha 3. It would be a nice indication of the on-going translation effort. In regard of localization, the current nightlies have come such a long way from alpha 2 that we could proudly show this in our welcome message.