Maybe the B_TRANSLATE_COMMENT was too long for HTA? Tried taos' patch of #7494.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41542 a95241bf-73f2-0310-859d-f6bbb57e9c96